--- a/all/menu/translations/oracle_translations.csv
+++ b/all/menu/translations/oracle_translations.csv
@@ -1,5 +1,8 @@
 HISTORIQUE,fr,en
 TIRAGE,Tirage,Draw
+YOUR_THOUGTHS_HERE,Un ressenti ? Ecrivez le.,A feeling ? Write it.
+LANGUE_TEXT,Français,English
+CLEAR_DRAW_HISTORY,Effacer l'historique des tirages,Clear draw history
 KARMA,Karma,Karma
 SIGNE,Signe,Sign
 MAISON,Maison,House
